--- a/package.json
+++ b/package.json
@@ -17,15 +17,21 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@types/react": "^17.0.33",
+    "@types/react-helmet": "^6.1.4",
+    "bootstrap": "5.1.3",
     "gatsby": "^4.0.2",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-mdx": "^3.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-sass": "^5.0.0",
     "gatsby-plugin-sharp": "^4.0.1",
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sass": "^1.43.4"
   }
 }
