--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-sharp": "^4.0.1",
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
+    "holderjs": "^2.9.9",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.1",
